<resources>
    <string name="app_name">ADProj</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">"Username"</string>
    <string name="password">"Password"</string>
    <string name="login">"Login"</string>
    <string name="logout">"Logout"</string>
    <string name="createacct">"Create Account"</string>
    <string name="home">"Home"</string>
    <string name="leaderboard">"Leaderboard"</string>
    <string name="map">"Map"</string>
    <string name="camera">"Camera"</string>
    <string name="profile">"Profile"</string>
    <string name="string_count_glass">0</string>
    <string name="string_count_metal">0</string>
    <string name="string_count_paper">0</string>
    <string name="string_count_plastic">0</string>
    <string name="glass">(Glass)</string>
    <string name="metal">(Metal)</string>
    <string name="paper">(Paper)</string>
    <string name="plastic">(Plastic)</string>
    <string name="changeUserprofile">"Change Userprofile"</string>
    <string name="user">"User"</string>
    <string name="mon">"Mon"</string>
    <string name="tue">"Tue"</string>
    <string name="wed">"Wed"</string>
    <string name="thur">"Thu"</string>
    <string name="fri">"Fri"</string>
    <string name="sat">"Sat"</string>
    <string name="sun">"Sun"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="facebook_app_id">436536591738877</string>
    <string name="fb_login_protocol_scheme">fb436536591738877</string>
    <string name="facebook_client_token">c7acb5ce6c91b68652fce1ea2fdfc0dd</string>

    <string name="app_logo">App Logo</string>
    <string name="newpassinfo">New password should at least contain an uppercase and a number</string>
    <string name="save">Save</string>
    <string name="update_password">update password</string>
    <string name="newpasstext">Password:</string>
    <string name="newusername">update username</string>
    <string name="newusertext">Username:</string>


</resources>