<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeDashboardFragment">

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/idBarChart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.8"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/days"

        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/days"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintTop_toBottomOf="@id/idBarChart"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/Mon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/mon"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/Tue"
            app:layout_constraintTop_toBottomOf="@id/idBarChart"
            tools:ignore="NotSibling" />

        <TextView
            android:id="@+id/Tue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/tue"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/Mon"
            app:layout_constraintRight_toLeftOf="@id/Wed"
            app:layout_constraintTop_toBottomOf="@id/idBarChart"
            tools:ignore="NotSibling"/>

        <TextView
            android:id="@+id/Wed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/wed"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/Tue"
            app:layout_constraintRight_toLeftOf="@id/Thur"
            app:layout_constraintTop_toBottomOf="@id/idBarChart"
            tools:ignore="NotSibling"/>

        <TextView
            android:id="@+id/Thur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/thur"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/Wed"
            app:layout_constraintRight_toLeftOf="@id/Fri"
            app:layout_constraintTop_toBottomOf="@id/idBarChart"
            tools:ignore="NotSibling"/>

        <TextView
            android:id="@+id/Fri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/fri"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/Thur"
            app:layout_constraintRight_toLeftOf="@id/Sat"
            app:layout_constraintTop_toBottomOf="@id/idBarChart"
            tools:ignore="NotSibling"/>

        <TextView
            android:id="@+id/Sat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/sat"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/Fri"
            app:layout_constraintRight_toLeftOf="@id/Sun"
            app:layout_constraintTop_toBottomOf="@id/idBarChart"
            tools:ignore="NotSibling"/>

        <TextView
            android:id="@+id/Sun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/sun"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/Sat"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/idBarChart"
            tools:ignore="NotSibling"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
