<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/profileFragment"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/changeprofilepic"
        android:layout_width="117dp"
        android:layout_height="117dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/icon">

    </ImageView>

    <TextView
        android:id="@+id/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/changeprofilepic"
        android:layout_alignBottom="@id/changeprofilepic"
        android:layout_marginStart="55dp"
        android:text="@string/user"
        android:textColor="@color/text_dirtygreen"
        android:textSize="35sp"
        android:textStyle="bold|italic" />


    <Button
        android:id="@+id/btnchangeuserprofile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/banner_green"
        android:padding="40dp"
        android:text="@string/changeUserprofile"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btnlogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/banner_green"
        android:padding="40dp"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:layout_below="@id/btnchangeuserprofile" />


</RelativeLayout>