<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="50dp" >


        <ImageView
            android:id="@+id/changeprofilepic"
            android:layout_width="117dp"
            android:layout_height="117dp"
            android:background="@drawable/icon" />

        <TextView
            android:id="@+id/user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/changeprofilepic"
            android:layout_alignBottom="@id/changeprofilepic"
            android:text="@string/user"
            android:textColor="@color/text_dirtygreen"
            android:textSize="35sp"
            android:textStyle="bold|italic"
            android:paddingLeft="80dp"
            app:layout_constraintLeft_toRightOf="@id/changeprofilepic"
            app:layout_constraintTop_toTopOf="@id/changeprofilepic"
            />

    </RelativeLayout>

    <Button
        android:id="@+id/btnchangeuserprofile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/banner_green"
        android:padding="40dp"
        android:text="@string/changeUserprofile"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/header"
        />


    <Button
        android:id="@+id/btnlogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/banner_green"
        android:padding="40dp"
        android:text="@string/logout"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/btnchangeuserprofile"
        />


</androidx.constraintlayout.widget.ConstraintLayout>
