<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">


    <ImageView
        android:id="@+id/loginlogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/username"
        android:layout_marginTop="65dp"
        />

    <EditText
        android:id="@+id/username"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:hint="@string/username"
        android:padding="10dp"
        android:layout_marginTop="30dp"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/loginlogo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username"
        android:background="@drawable/rounded_button"
        android:gravity="start"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:textColorHint="@color/white" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:padding="30dp"
        android:text="@string/login"
        android:textColor="@color/text_green" />

    <Button
        android:id="@+id/createaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:paddingTop="0dp"
        android:paddingBottom="30dp"
        android:text="@string/createacct"
        android:textColor="@color/text_green" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/fblogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/createaccount"
        />

    <ImageView
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:background="@color/menu_bar_green"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
