<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <RelativeLayout
        android:id="@+id/bg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:background="@color/bg_grey"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/footer"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp">


    </RelativeLayout>

    <ImageView
        android:id="@+id/loginlogo"
        android:layout_width="320dp"
        android:layout_height="140dp"
        android:padding="20dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/logo"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="97dp"
        tools:ignore="MissingConstraints">

    </ImageView>

    <EditText
        android:id="@+id/username"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:layout_margin="80dp"
        android:background="@drawable/rounded_button"
        android:padding="6dp"
        android:text="@string/username"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="115dp"
        tools:layout_editor_absoluteY="332dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/password"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_margin="80dp"
        android:background="@drawable/rounded_button"
        android:gravity="start"
        android:padding="6dp"
        android:text="@string/password"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="115dp"
        tools:layout_editor_absoluteY="393dp"
        tools:ignore="MissingConstraints"
        />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="80dp"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:padding="6dp"
        android:text="@string/login"
        android:textColor="@color/text_green"
        tools:layout_editor_absoluteX="155dp"
        tools:layout_editor_absoluteY="452dp"
        tools:ignore="MissingConstraints"/>

    <Button
        android:id="@+id/createaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:padding="6dp"
        android:text="@string/createacct"
        android:textColor="@color/text_green"
        tools:layout_editor_absoluteX="125dp"
        tools:layout_editor_absoluteY="502dp"
        tools:ignore="MissingConstraints"/>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/createaccount"
        tools:layout_editor_absoluteX="108dp"
        tools:ignore="MissingConstraints"/>

    <ImageView
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:background="@color/menu_bar_green"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent">
    </ImageView>

</androidx.constraintlayout.widget.ConstraintLayout>